force-app/main/default/objects/Emergency_Contact__c.object
<CustomObject>
    <description>Emergency contact details for the student</description>
    <fields>
        <fullName>Active_From__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Start of active date range (used by the active flag)</description>
        <inlineHelpText>The start date from which this emergency contact should be considered</inlineHelpText>
        <label>Active From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_To__c</fullName>
        <description>End of active date range (used by the active flag)</description>
        <inlineHelpText>End of active date range</inlineHelpText>
        <label>Active To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>Active status calculation</description>
        <formula>AND(Active_From__c &lt;= TODAY(), BLANKVALUE(Active_To__c, TODAY()) &gt;= TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated status based on the active date range</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Email_Address__c</fullName>
        <description>A secondary email address</description>
        <inlineHelpText>A secondary email address</inlineHelpText>
        <label>Alternate Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <description>A secondary phone number</description>
        <inlineHelpText>A secondary phone number</inlineHelpText>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Channel_Link__c</fullName>
        <description>Alt link to the Channel record</description>
        <formula>Channel__r.Channel_Link__c</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Callista source data for the Emergency Contact</description>
        <label>Channel</label>
        <referenceTo>Channel__c</referenceTo>
        <relationshipLabel>Emergency Contacts</relationshipLabel>
        <relationshipName>Emergency_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Address field</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Student owner of the EC</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Emergency Contacts</relationshipLabel>
        <relationshipName>Emergency_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Address Field

ISO Country List for Emergency Contacts</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_List_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Primary email address</description>
        <inlineHelpText>Primary email address</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <description>The name details received from Callista. You will expect a channel to be linked if this field is populated. The UI will only show this field if it is populated.</description>
        <inlineHelpText>The name of the emergency contact as supplied from Callista</inlineHelpText>
        <label>Emergency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <description>Self referencing field for listviews as an alternative to the auto-number</description>
        <formula>HYPERLINK(&apos;/&apos;+Id, IF (ISBLANK( Emergency_Contact_Name__c ), trim(First_Name__c + &apos; &apos; + Last_Name__c),Emergency_Contact_Name__c) + &apos; (&apos; + Relationship__c +&apos;)&apos; ,&apos;_self&apos; )</formula>
        <label>Emergency Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First and given names of the EC.

A validation rule ensures that a first or last name is entered, so mononymous names can be entered in either field.</description>
        <inlineHelpText>First and given names of the EC</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fullname__c</fullName>
        <description>The Callista supplied full name or the first &amp; last names concatenated</description>
        <formula>IF(ISBLANK(Emergency_Contact_Name__c), TRIM(First_Name__c &amp; &apos; &apos; &amp; Last_Name__c), Emergency_Contact_Name__c)</formula>
        <inlineHelpText>EC Full name</inlineHelpText>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_UID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>System Field - Unique Key Combination field</description>
        <externalId>true</externalId>
        <inlineHelpText>System Field - Unique Key Combination field</inlineHelpText>
        <label>Key UID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>The surname or family name of the EC. 

A validation rule ensures that a first or last name is entered, so mononymous names can be entered in either field.</description>
        <inlineHelpText>The surname or family name of the EC</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Primary phone number</description>
        <inlineHelpText>Primary phone number</inlineHelpText>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional details or instructions</description>
        <inlineHelpText>Additional details or instructions related to reaching out to the EC</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <description>Address field</description>
        <inlineHelpText>Address field</inlineHelpText>
        <label>Post Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <description>The preferred language of correspondence with the EC</description>
        <inlineHelpText>The preferred language of correspondence with the EC</inlineHelpText>
        <label>Preferred Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A manually selected field to indicate the preferred emergency contact. There are no restrictions on the number of preferred ECs indicated.</description>
        <inlineHelpText>Indicates a preferred emergency contact</inlineHelpText>
        <label>Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>A description of the relationship between the student and the EC</description>
        <inlineHelpText>Relationship of the EC with the Student</inlineHelpText>
        <label>Relationship</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Address field</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <description>Address field</description>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <inlineHelpText>The time zone the emergency contact resides in</inlineHelpText>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>purecloud__Time_Zones</valueSetName>
        </valueSet>
    </fields>
    <label>Emergency Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Relationship__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Alternate_Phone__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Alternate_Email_Address__c</columns>
        <columns>Preferred_Language__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Emergency Contacts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Active_Emergency_Contacts</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Relationship__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Alternate_Phone__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Alternate_Email_Address__c</columns>
        <columns>Preferred_Language__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Emergency Contacts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EC-{00000000}</displayFormat>
        <label>Emergency Contact Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emergency Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Enforce_date_range</fullName>
        <active>true</active>
        <description>Ensure that the active dates for a positive range</description>
        <errorConditionFormula>blankvalue(Active_To__c,today()) &lt; Active_From__c</errorConditionFormula>
        <errorMessage>The active to date field must be blank or follow the active from date field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_minimum_contact_details</fullName>
        <active>true</active>
        <description>Ensure we have some minimum details for the EC record to be useful</description>
        <errorConditionFormula>AND( 
ISBLANK(Mobile_Phone__c), 
ISBLANK(Alternate_Phone__c),
ISBLANK(Alternate_Email_Address__c),
ISBLANK(Email_Address__c),
OR(ISBLANK(Street_Name__c),ISBLANK(Text(Country__c)))
)</errorConditionFormula>
        <errorMessage>Please supply a phone, email or minimum address details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_minimum_name_details</fullName>
        <active>true</active>
        <description>We need a first or last name as a minimum</description>
        <errorConditionFormula>AND(
ISBLANK(First_Name__c),
ISBLANK(Last_Name__c),
ISBLANK(Emergency_Contact_Name__c)
)</errorConditionFormula>
        <errorMessage>Please supply a first or last name</errorMessage>
    </validationRules>
</CustomObject>